@@ -10,6 +10,8 @@
     - Added support for dragging a file link from the file column to another application.
     - Added toolbar button and shortcut (Alt-F) in entry editor for autosetting file links.
     - Improved ISI import filter so DOI information is included.
+    - Fixed bug in Scifinder import where an empty Inventor field could overwrite the
+      author field.
     - Fixed bug in autocompleter. Current suggested completion would be added to the field
       if the user closed the entry editor or mouse clicked on another field.
     - Fixed problem with exporting to some MySql versions. Patch by François Dorin. 
